<resources>
    <string name="app_name"></string>
    <string name="hello_world">hello_world></string>
    <string name="choix_forme_client">Votre choix de forme </string>
    <string name="choix_forme_serveur">Le choix du serveur</string>
    <string name="choix_forme_programme">Le choix du programme</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="title_activity_nouveau_main">nouveau_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TEAM PLFI</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="r_ponse_serveur">Réponse Serveur :</string>
    <string name="attente_de_votre_envoit_de_figure"> En attente de votre figure</string>
    <string name="attention_stats">0</string>
    <string name="attente_stats">0</string>
    <string name="ipConnexion">192.168.1.96</string>
    <string name="portConnexion">10101</string>
    <string name="game_reflex">Game Reflex</string>
    <string name="game_enigme">Game Enigme</string>
    <string name="game_rtc">Game RTC</string>
    <string name="new_game_soon">New game soon</string>
    <string name="score">SCORE :   </string>
    <string name="score_max">SCORE MAX :</string>
    <string name="figure">FIGURE :</string>
    <string name="a_remplir">(PRESS START)</string>
    <string name="start">START</string>
    <string name="résultat">Résultat : </string>
</resources>
